# website

./: .Rprofile  .gitignore  .gitignore.dev  .gitignore.main  .luarc.json  .renvignore  CHANGELOG.md  _quarto.yml  index.qmd  pyproject.toml
blog/: blogindex.qmd
blog/CR_API_Tutorials/: JSON.qmd  glossary.qmd  introduction_to_tutorial.qmd  troubleshooting-browser-JSON-view.qmd  what-is-api.qmd
blog/IGDORE/: openCodeForOpenScience.qmd
blog/Research_Software_Engineering/: randomization-seeds.qmd
build_utils/: build_glossary.py
changelog_fragments/: changelogtitle.md.j2  fragment_template.md.j2
commitment_scheme/: 2026-04-08.enc  2026-04-08_sha256sumHash.txt  README.md
css/: code-blocks.css  jse.css  modal-ext.css  modals.css  top-level-styles.css
css/scss/: _indents.scss  dark_styles.scss  styles.scss
docs/: about.html  index.html  search.json  styles.css
docs/blog/: blogindex.html  index.html
docs/css/: code-blocks.css  float-button.css  jse.css  jsoneditor_clear.css  modals.css  presentation_styles.css  styles.css  top-level-styles.css
docs/data/: lancet-metadata-record-example.json
docs/drafts/: CR_API_tutorial_glossary.html  appendices-index.html  appendix1_ex.html  glossary.html  what-is-api.html
docs/js/: APIcall.js  footnote-highlight-animation.html  initializePopOvers.js
docs/mycode/: APIcall.js  fileHandling.js
docs/presentations/: PYMS_Lunch_Talk_2026-04-24.html
docs/projects/: index.html  (+1 more)
js/: plausibleAnalyticsSnippet.html
presentations/: PYMS_Lunch_Talk_2026-04-24.qmd
projects/: projects.qmd
toolbox/: index.qmd
(+82 files in other folders)
